@@ -1,3 +1,8 @@
+2005-03-28  Sam Steingold  <sds@gnu.org>
+
+	* foreign1.lisp (DEF-C-VAR, DEF-CALL-OUT): accept :DOCUMENTATION
+	Suggested by Yaroslav Kavenchuk <kavenchuk@jenty.by>
+
 2005-03-26  Sam Steingold  <sds@gnu.org>
 
 	replaced -interactive-debug with -on-error <action>
@@ -82,7 +87,7 @@
 2005-03-22  Sam Steingold  <sds@gnu.org>
 
 	* modules/wildcard/wildcard.lisp (*features*): add :WILDCARD
-	Requested by Yaroslav Kavenchuk <kavenchuk@jenty.by>
+	Suggested by Yaroslav Kavenchuk <kavenchuk@jenty.by>
 
 2005-03-22  Bruno Haible  <bruno@clisp.org>
 
